# webrtc-messenger

./: CMakeUserPresets.json  LICENSE  README.md  conanfile.py
client/: example-client.html  example-client.js
conan/: pyvenv.cfg
server/: CMakeLists.txt
server/src/: main.cpp  observers.h
